# wall-e--boss

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_SPEC.md  PROJECT_SPEC.md.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  readme md.txt  turbo.json  vercel.json  vitest.config.ts
apps/api/: README.md  alembic.ini  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202601271640_init.py
apps/api/app/: __init__.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
apps/api/app/routers/: briefing.py  calendar.py  plan.py  tasks.py
apps/api/app/services/: briefing.py  calendar_mock.py  plan.py
apps/api/tests/: conftest.py  test_health.py  test_tasks.py
apps/web/: .env.example  .eslintrc.cjs  .prettierrc.cjs  README.md  package.json  tailwind.config.ts  tsconfig.json
docs/: 00-vision.md  01-mvp.md  02-user-stories.md  03-ux-voice.md  04-ux-planning-views.md  05-architecture.md  06-domain-model.md  07-event-catalog.md  08-integrations-google.md  09-notifications.md  10-planning-engine.md  11-household.md  12-security-privacy.md  13-data-model.md  14-deployment.md  deploy-vercel.md  questions.md
docs/adr/: 0001-architecture-style.md  0002-storage-and-encryption.md  0003-privacy-and-consent.md  0004-google-oauth-scopes.md  0005-notification-strategy.md  0006-voice-stt-tts.md  0007-proactivity-and-automation.md
docs/plans/: 2026-01-27-full-implementation.md  2026-01-27-meeting-recordings.md  (+3 more)
supabase/: config.toml  seed.sql
(+56 files in other folders)
